--- a/appfront/package.json
+++ b/appfront/package.json
@@ -10,9 +10,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^2.1.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.2",
+    "vis-network": "^9.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
