--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "express": "^4.17.3",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "vis-network": "^9.1.2"
   },
   "name": "-olc1-proyecto2_202000194",
   "description": "<img alt=\"JavaScript\" src=\"https://img.shields.io/badge/-JavaScript-F7DF1E?style=flat-square&logo=JavaScript&logoColor=white\" />\r   <img alt=\"angular\" src=\"https://img.shields.io/badge/-Angular-DD0031?style=flat-square&logo=angular&logoColor=white\" />",
